[gd_scene load_steps=7 format=3 uid="uid://c7303mqwb10l6"]

[ext_resource type="Script" uid="uid://d4mhlv2spbbx3" path="res://scripts/flag.gd" id="1_q38m2"]
[ext_resource type="Texture2D" uid="uid://ykrrgeur0sm6" path="res://assets/1-bit-pack/Tilesheet/colored-transparent.png" id="2_32e5v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q38m2"]
atlas = ExtResource("2_32e5v")
region = Rect2(289, 136, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjkec"]
atlas = ExtResource("2_32e5v")
region = Rect2(289, 153, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tjkec"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q38m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjkec")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5mf2"]
size = Vector2(12.75, 14.125)

[node name="Flag" type="Area2D"]
collision_mask = 2
script = ExtResource("1_q38m2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_tjkec")
autoplay = "default"
frame_progress = 0.255178

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_s5mf2")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
